--- a/frontend/bienvenida.html
+++ b/frontend/bienvenida.html
@@ -3,27 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Bienvenido</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; }
+        .container { margin-top: 50px; }
+        button { padding: 10px; margin-top: 20px; cursor: pointer; }
+    </style>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <img src="images/logo.png" alt="Logo" class="logo">
-        <h2>Iniciar Sesión</h2>
-        <form id="login-form">
-            <div class="input-group">
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" placeholder="Ingrese su correo" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" placeholder="Ingrese su contraseña" required>
-            </div>
-            <button type="submit" id="login-button">Iniciar Sesión</button>
-        </form>
-        <p id="message"></p> <!-- Mensaje de error o éxito -->
+        <h1>¡Bienvenido!</h1>
+        <p id="user-email"></p>
+        <button id="logout">Cerrar Sesión</button>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const userEmail = localStorage.getItem("user");
+
+            if (!userEmail) {
+                window.location.href = "index.html"; // Redirigir si no hay sesión activa
+            } else {
+                document.getElementById("user-email").textContent = "Usuario: " + userEmail;
+            }
+
+            // Cerrar sesión
+            document.getElementById("logout").addEventListener("click", () => {
+                localStorage.removeItem("user");
+                window.location.href = "index.html"; // Redirigir al login
+            });
+        });
+    </script>
 </body>
 </html>
